[gd_scene load_steps=4 format=3 uid="uid://chswq11g6vicl"]

[ext_resource type="FontFile" uid="uid://yp13ua2r8a7a" path="res://PublicPixel-z84yD.ttf" id="1_uq3xl"]
[ext_resource type="Script" path="res://main.gd" id="2_kpkh3"]

[sub_resource type="Theme" id="Theme_ksi8v"]
default_font = ExtResource("1_uq3xl")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ksi8v")
script = ExtResource("2_kpkh3")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -268.0
offset_right = 278.0
offset_bottom = -235.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Problema \"Monty Hall\""

[node name="DoorSelection" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -124.0
offset_right = 182.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 2

[node name="DoorsAmountLabel" type="Label" parent="DoorSelection"]
layout_mode = 2
text = "Número de Portas: "

[node name="ChosenAmount" type="LineEdit" parent="DoorSelection"]
layout_mode = 2
text = "3"

[node name="SimulateButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -60.0
offset_right = 64.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
text = "SIMULAR"

[node name="Statistics" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 84.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SimulationsRun" type="VBoxContainer" parent="Statistics"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 37
alignment = 1

[node name="Label" type="Label" parent="Statistics/SimulationsRun"]
layout_mode = 2
text = "Número de Simulações:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Amount" type="Label" parent="Statistics/SimulationsRun"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="CorrectAnswers" type="VBoxContainer" parent="Statistics"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 37
alignment = 1

[node name="Label" type="Label" parent="Statistics/CorrectAnswers"]
layout_mode = 2
text = "Respostas certas (mudando a escolha):"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Amount" type="Label" parent="Statistics/CorrectAnswers"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="CorrectAnswersPercent" type="VBoxContainer" parent="Statistics"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 37
alignment = 1

[node name="Label" type="Label" parent="Statistics/CorrectAnswersPercent"]
layout_mode = 2
text = "Percentagem de respostas certas:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Percentage" type="Label" parent="Statistics/CorrectAnswersPercent"]
layout_mode = 2
text = "0%"
horizontal_alignment = 1

[node name="StopButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 228.0
offset_right = 48.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
text = "Parar"

[connection signal="pressed" from="SimulateButton" to="." method="_on_simulate_button_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_stop_button_pressed"]
